--- a/projects/ngx-iconic/package.json
+++ b/projects/ngx-iconic/package.json
@@ -1,9 +1,18 @@
 {
   "name": "ngx-iconic",
-  "version": "0.0.3-beta.2",
+  "version": "19.1.1",
   "author": "Zooom (Hazem)",
   "description": "A standalone Angular icon component like mat-icon",
   "keywords": ["angular", "icon", "standalone", "component"],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/strikerh/ngx-iconic.git"
+  },
+  "bugs": {
+    "url": "https://github.com/strikerh/ngx-iconic/issues"
+  },
+  "homepage": "https://github.com/strikerh/ngx-iconic#readme",
+
   "license": "MIT",
   "peerDependencies": {
     "@angular/common": "^19.2.0",
